fixed alignment of 'Eco news' on screens 576px, 1024px, 768px

--- a/src/app/component/eco-news/components/news-list/news-list.component.scss
+++ b/src/app/component/eco-news/components/news-list/news-list.component.scss
@@ -90,13 +90,11 @@ a {
 
 @media screen and (max-width: 1024px) {
   .wrapper {
-    margin: 0 2.42%;
+    margin: 0 3.12%;
   }
 }
 
 @media screen and (max-width: 991px) {
-
-
   .gallery-view-active {
     grid-template-columns: repeat(2, 353px);
     grid-gap: 15px;
@@ -108,9 +106,9 @@ a {
 }
 
 @media screen and (max-width: 767px) {
-  // .wrapper {
-  //   margin: 0 1.95%;
-  // }
+  .wrapper {
+    margin: 0 1.95%;
+  }
 
   .gallery-view-active {
     grid-template-columns: repeat(2, 258px);
@@ -118,10 +116,10 @@ a {
   }
 }
 
-@media screen and (max-width: 575px) {
-  // .wrapper {
-  //   margin: 0 2.4%;
-  // }
+@media screen and (max-width: 576px) {
+  .wrapper {
+    margin: 0 2.43%;
+  }
 
   .gallery-view-active {
     grid-template-columns: repeat(1, 288px);
